--- a/packages/fluent/tsconfig.debug.json
+++ b/packages/fluent/tsconfig.debug.json
@@ -7,10 +7,7 @@
     "module": "CommonJS",
     "removeComments": false,
     "incremental": false,
-    "plugins": [
-      { "transform": "./src/rewrite.ts" },
-      { "transform": "@effect-ts/tracing-plugin" }
-    ]
+    "plugins": [{ "transform": "@effect-ts/tracing-plugin" }]
   },
   "include": ["./test/dummy.test.ts"]
 }
