--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -11,7 +11,8 @@
           "^packages/fluent/src/(.*)": "(@effect-ts/fluent): src/$1",
           "^packages/fluent/test/(.*)": "(@effect-ts/fluent/test): test/$1"
         }
-      }
+      },
+      { "transform": "typescript-transform-paths" }
     ]
   }
 }
