chore(package): fix package json

--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -29,11 +29,6 @@
     "@effect-ts/core": "^0.40.16"
   },
   "config": {
-    "modules": [
-      "array",
-      "layer",
-      "has",
-      "either"
-    ]
+    "modules": []
   }
 }
