--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
-    "@effect-ts/build-utils": "^0.20.19",
-    "@effect-ts/core": "^0.40.17",
-    "@effect-ts/tracing-plugin": "^0.11.8",
+    "@effect-ts/build-utils": "^0.22.3",
+    "@effect-ts/core": "^0.42.2",
+    "@effect-ts/tracing-plugin": "^0.13.2",
     "@types/cpx": "^1.5.1",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.5",
+    "@types/node": "^15.14.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "chalk": "^4.1.1",
+    "concurrently": "^6.2.0",
     "cpx": "^1.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "dtslint": "github:gcanti/dtslint",
