--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -9,6 +9,7 @@
     "clean": "rimraf build tsbuildinfo dist",
     "build-cjs": "ttsc -p tsconfig.build.cjs.json",
     "build-esm": "ttsc -p tsconfig.build.esm.json",
+    "build-debug": "ttsc -p tsconfig.debug.cjs.json",
     "build-post": "build-utils pack",
     "build": "concurrently \"yarn build-cjs\" \"yarn build-esm\" && yarn build-post",
     "lint": "eslint . --ext .ts,.tsx",
