--- a/package.json
+++ b/package.json
@@ -30,43 +30,44 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.14.8",
-    "@effect-ts/build-utils": "^0.23.0",
-    "@effect-ts/core": "^0.43.0",
-    "@effect-ts/tracing-plugin": "^0.14.0",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@effect-ts/build-utils": "^0.23.10",
+    "@effect-ts/core": "^0.43.9",
+    "@effect-ts/node": "^0.28.1",
+    "@effect-ts/tracing-plugin": "^0.14.8",
     "@types/cpx": "^1.5.2",
     "@types/glob": "^7.1.4",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.4.6",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "chalk": "^4.1.1",
-    "concurrently": "^6.2.0",
+    "chalk": "^4.1.2",
+    "concurrently": "^6.2.1",
     "cpx": "^1.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "dtslint": "github:gcanti/dtslint",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-codegen": "^0.16.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "fast-check": "^2.17.0",
     "glob": "^7.1.7",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
+    "husky": "^7.0.2",
+    "jest": "^27.1.1",
     "lerna": "^4.0.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.0",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "ttypescript": "^1.5.12",
-    "typescript": "4.4.2",
+    "typescript": "4.4.3",
     "typescript-transform-paths": "3.3.1",
     "ultra-runner": "^3.10.5",
     "yarn-deduplicate": "^3.0.0"
