--- a/packages/fluent-node/tsconfig.build.esm.json
+++ b/packages/fluent-node/tsconfig.build.esm.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "noEmit": false,
     "outDir": "build/esm",
     "target": "ES2018",
     "module": "ES6",
